--- a/android-app-java/app/src/main/res/values/strings.xml
+++ b/android-app-java/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Crop Analyzer App</string>
+    <string name="app_name">Crop Analyzer</string>
 </resources>
